Fixing overflow in table cells

--- a/client/scripts/controls/table/table.css
+++ b/client/scripts/controls/table/table.css
@@ -2,6 +2,10 @@
   width: 100%;
 }
 
+.column {
+  overflow-wrap: break-word;
+}
+
 .header {
   display: flex;
   flex-direction: row;
